Remove ejml libraries, replacing them with handmade matrix class and optimise various classes